--- a/expandablerecyclerview/build.gradle
+++ b/expandablerecyclerview/build.gradle
@@ -3,14 +3,13 @@ apply plugin: 'com.github.dcendents.android-maven'
 
 group='com.github.ayalma'
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 14
+        targetSdkVersion 28
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -21,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.nineoldandroids:library:2.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
